corrected grid snapping, solves #232
notes:
-was already snapping to grid but didn't look like it because toolbox
border was shifting everything by 3px
-drag function wasn't updating the position, this.rnd.updatePosition
doesn't work inside onDrag
-snapping while dragging is done by dragGrid property

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -305,7 +305,7 @@ body {
 }
 
 .toolbox-dropzone-editing {
-  border: 3px dashed #e1e1e1;
+  outline: 3px dashed #e1e1e1;
 }
 
 .toolbox-dropzone-active {
